<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.dida.android.presentation.views.nickname.NicknameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/mainblack">

        <TextView
            android:id="@+id/nickname_main_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/nickname_main_yourname"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="@color/white"
            android:textSize="28dp">
        </TextView>

        <TextView
            android:id="@+id/nickname_main_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nickname_main_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="40dp"
            android:text="@string/nickname_main_text"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="@color/white"
            android:textSize="14dp">
        </TextView>

        <EditText
            android:id="@+id/nick_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_nickname_edit"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:drawablePadding="14dp"
            android:padding="16dp"
            android:textSize="14dp"
            android:fontFamily="@font/pretendard_regular"
            android:hint="@string/nickname_edit_hint"
            android:text="@={vm.userInputStateFlow}"
            android:textColorHint="@color/surface6"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/nickname_main_txt2">
        </EditText>

        <TextView
            android:id="@+id/nickname_check_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nick_name_edit"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/pretendard_regular"
            android:textColor="@{vm.nickNameCheckEvent ? @color/notice_red : @color/notice_green}"
            android:text="@{vm.nickNameCheckStateFlow}"
            android:textSize="14dp">
        </TextView>

        <ImageView
            android:id="@+id/nickname_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:src="@{vm.nickNameCheckEvent ? @drawable/ic_nickname_fail : @drawable/ic_nickname_success}"
            app:layout_constraintTop_toTopOf="@id/nick_name_edit"
            app:layout_constraintBottom_toBottomOf="@id/nick_name_edit"
            app:layout_constraintRight_toRightOf="@id/nick_name_edit">
        </ImageView>

        <TextView
            android:id="@+id/ok_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:padding="18dp"
            android:text="@string/nickname_ok_btn"
            android:fontFamily="@font/pretendard_bold"
            android:onClick="@{() -> vm.onCreateItemClicked()}"
            android:textColor="@{vm.nickNameCheckEvent ? @color/surface6 : @color/mainblack}"
            android:textSize="16dp"
            android:background="@{vm.nickNameCheckEvent ? @drawable/custom_okbtn_fail_custom : @drawable/custom_okbtn_success}">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

