<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.dida.android.presentation.views.nav.mypage.UpdateProfileViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainblack"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            updateProfileToolbar="@{vm.updateCheckState}"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/profile_title_text"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/mainblack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/profile_cl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="14dp">
                <!--TODO : 프로필 없을 시 기본 사진 추가-->
                    <ImageView
                        android:id="@+id/circleImageView"
                        updateProfileImage="@{vm.profileImageState}"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:background="@drawable/custom_surface2_radius100"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_camera_profile"
                        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                        app:layout_constraintEnd_toEndOf="@+id/circleImageView" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_cl">

                    <TextView
                        style="@style/TextView_bold_14_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_nickname_text" />
                    <EditText
                        android:id="@+id/nickname_et"
                        style="@style/EditText_surface2_radius10_solid_surface5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableEnd="@drawable/ic_baseline_close_14_warning"
                        android:hint="@string/profile_nickname_hint"
                        android:text="@={vm.nickNameState}"
                        android:inputType="text"
                        android:maxLength="8"
                        android:maxLines="1"/>

                    <TextView
                        android:id="@+id/nickname_check_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/pretendard_regular"
                        android:text="@{vm.nickNameCheckTextState}"
                        android:textColor="@{vm.nickNameCheckState ? @color/notice_red : @color/notice_green}"
                        android:textSize="14dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/nick_name_edit"/>

                    <TextView
                        style="@style/TextView_bold_14_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:text="@string/profile_description_text" />

                    <EditText
                        android:id="@+id/description_et"
                        style="@style/EditText_surface2_radius10_solid_surface5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableEnd="@drawable/ic_baseline_close_14_warning"
                        android:hint="@string/profile_description_hint"
                        android:text="@={vm.descriptionState}"
                        android:inputType="textMultiLine" />

                    <TextView
                        android:id="@+id/description_check_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/pretendard_regular"
                        android:text="@string/profile_description_check_text"
                        android:textColor="@color/notice_red"
                        android:textSize="14dp"
                        android:visibility="@{vm.descriptionCheckState ? View.GONE : View.VISIBLE}"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/nick_name_edit"
                        tools:visibility="visible" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

